moved all styles to sass files

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -2,6 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
+  link(rel="stylesheet" href="#{prefix}/css/admin.min.css")
 
 block header
   +header('margin-bottom')
