--- a/src/sass/signup.sass
+++ b/src/sass/signup.sass
@@ -1,9 +1,8 @@
 // 1 - TOOLS
 
 // 2 - BASICS
-@import '2-basics/top-bar';
 
 // 3 - Modules
 
 // 4 - pages
-@import '4-pages/index'
+@import '4-pages/signup'
