--- a/views/cookies.jade
+++ b/views/cookies.jade
@@ -2,11 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  style.
-    html, body {
-      width: 100%;
-      height: 100%;
-    }
+  link(rel="stylesheet" href="#{prefix}/css/cookies.min.css")
 
 block header
   div.container.header
