--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -2,11 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  style.
-    html, body {
-      width: 100%;
-      height: 100%;
-    }
+  link(rel="stylesheet" href="#{prefix}/css/dashboard.min.css")
 
 block header
   +header('margin-bottom')
