--- a/views/error.jade
+++ b/views/error.jade
@@ -2,6 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
+  link(rel="stylesheet" href="#{prefix}/css/error.min.css")
 
 block content
   div(style="height: 100vh").row.align-center.align-middle
