--- a/views/profile.jade
+++ b/views/profile.jade
@@ -2,6 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
+  link(rel="stylesheet" href="#{prefix}/css/profile.min.css")
 
 block header
   +header('margin-bottom')
