--- a/views/signup.jade
+++ b/views/signup.jade
@@ -2,9 +2,10 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
+  link(rel="stylesheet" href="#{prefix}/css/signup.min.css")
 
 block content
-  div(style="height: 100vh").row.align-center.align-middle
+  div.row.align-center.align-middle
     div.small-10.large-6.column
       h1
         span.fa.fa-sign-in
