--- a/plugins/wantit/views/error.jade
+++ b/plugins/wantit/views/error.jade
@@ -5,7 +5,7 @@ append head
   link(rel="stylesheet" href="#{prefix}/css/error.min.css")
 
 block content
-  div(style="height: 100vh").row.align-center.align-middle
+  div.row.align-center.align-middle
     div.small-10.large-10.column.text-center
       h1
         span.fa.fa-exclamation-triangle
