--- a/plugins/ibc/src/sass/index.sass
+++ b/plugins/ibc/src/sass/index.sass
@@ -1,9 +1,9 @@
 // 1 - TOOLS
 
 // 2 - BASICS
+@import '2-basics/top-bar';
 
 // 3 - MODULES
-@import '3-modules/card'
 
 // 4 - PAGES
 @import '4-pages/index'
