switching from heroku to digital ocean

--- a/plugins/admin/views/index.jade
+++ b/plugins/admin/views/index.jade
@@ -14,7 +14,7 @@ block content
         div.content
           p Landing page and web app
         div.action
-          a(href="/wantit") Enter
+          a(href="https://msahtest2.xyz") Enter
     div.medium-4.columns
       div.card
         div.image
@@ -23,4 +23,4 @@ block content
         div.content
           p Map, dashboard and workers
         div.action
-          a(href="/ibc") Enter
+          a(href="https://msahtest3.xyz") Enter
