--- a/plugins/ibc/views/index.jade
+++ b/plugins/ibc/views/index.jade
@@ -2,7 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title IBC
-  link(rel="stylesheet" href="#{prefix}/css/index.min.css")
+  link(rel="stylesheet" href="/css/index.min.css")
 
 block header
   +header('margin-bottom')
