--- a/plugins/wantit/views/cookies.jade
+++ b/plugins/wantit/views/cookies.jade
@@ -2,7 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  link(rel="stylesheet" href="#{prefix}/css/cookies.min.css")
+  link(rel="stylesheet" href="/css/cookies.min.css")
 
 block header
   div.container.header
