--- a/plugins/wantit/views/admin.jade
+++ b/plugins/wantit/views/admin.jade
@@ -2,7 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  link(rel="stylesheet" href="#{prefix}/css/admin.min.css")
+  link(rel="stylesheet" href="/css/admin.min.css")
 
 block header
   +header('margin-bottom')
