--- a/plugins/wantit/views/error.jade
+++ b/plugins/wantit/views/error.jade
@@ -2,7 +2,7 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  link(rel="stylesheet" href="#{prefix}/css/error.min.css")
+  link(rel="stylesheet" href="/css/error.min.css")
 
 block content
   div.row.align-center.align-middle
